--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "rin",
-  "version": "4.0.0",
-  "description": "A Lean HTML & SASS Boilerplate",
-  "author": "sanographix",
+  "name": "html_template",
+  "version": "2.0.0",
+  "description": "",
+  "main": "gulpfile.js",
+  "author": "",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sanographix/rin"
+    "url": "https://github.com/tnkyy/html_template"
   },
   "devDependencies": {
-    "browser-sync": "~2.0.1",
-    "gulp": "^3.8.11",
-    "gulp-combine-media-queries": "^0.1.0",
-    "gulp-concat": "~2.4.3",
-    "gulp-csscomb": "*",
-    "gulp-pleeease": "~1.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "~1.3.3",
-    "gulp-uglify": "~1.1.0"
+    "browser-sync": "^2.18.6",
+    "gulp": "^3.9.1",
+    "gulp-combine-media-queries": "^0.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.0.0"
   }
 }
