--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
+    "gulp-pleeease": "^2.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.0.0"
